--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
  
-    <p>Hello World, We are software Developers!</p>
+    <h1 id="title">freeCodeCamp Survey Form</h1>
+    <p id="description">Thank you for taking the time to help us improve the platform</p>
+    <form id="survey-form">
+      <label for="fname">FName</label><br>
+      <input type="text" id="name" name="fname"><br>
+    
+    </form> 
     <!--
 
     Hello Camper!
