--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <main id="main">
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
  
     <h1 id="title">freeCodeCamp Survey Form</h1>
@@ -48,7 +49,7 @@
 
     
       <label>Any comments or suggestions?</label><br>
-      <textarea placeholder="Enter your comment here">
+      <textarea id="comments" placeholder="Enter your comment here">
 
       </textarea><br>
 
@@ -68,5 +69,6 @@
 
     -->
     <script  src="js/index.js"></script>
+  </main>
   </body>
 </html>
